test/libhyperion/syntaxTests/functionTypes/function_type_struct.hyp
library L
{
	struct Nested
	{
		uint y;
	}
	function f(function(Nested memory) external) external pure {}
}
// ----
// TypeError 4888: (55-88): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
